Split into microservices, add auth, gateway, and full docker compose stack